--- a/styles/note.css
+++ b/styles/note.css
@@ -1,4 +1,4 @@
-.note
+#note
 {
 	width: min(500px, 80%);
 	max-height: 35vh;
@@ -29,7 +29,7 @@
 	animation: animFadeIn 0.5s ease-out forwards;
 }
 
-/* .note:before /* https://codepen.io/run-time/pen/VNRBJd */
+/* #note:before /* https://codepen.io/run-time/pen/VNRBJd */
 /*{
 	content: "";
 	position: absolute;
