--- a/styles/outro.css
+++ b/styles/outro.css
@@ -2,20 +2,62 @@
 	--outro-zoom-out: 0;
 }
 
-#outroBox
+#outroNote
 {
 	position: absolute;
 	left: 50vw;
-	top: 50vh;
+	top: 30vh;
 	transform: translate(-50%, -50%);
-	width: 95%;
+	width: min(14em, 90%);
 
 	color: white;
 	text-align: center;
-	opacity: 0;
+	font-family: "Caveat", sans-serif;
+	font-size: 4vh;
 }
 
-#outroBox p
+#outroName
+{
+	position: absolute;
+	left: 50vw;
+	bottom: 20vh;
+	transform: translate(-50%, -50%);
+	width: min(14em, 90%);
+
+	color: white;
+	text-align: center;
+	font-family: "Roboto Slab", serif;
+	font-size: 8vh;
+
+	/* animation: animName 6s 4s ease-out forwards; */
+}
+
+.outroNameLetter
+{
+	display: inline-block;
+	white-space: nowrap;
+	margin-left: 0.3em;
+	opacity: 0;
+	animation: animOutroNameLetter 4s ease forwards;
+}
+
+@keyframes animOutroNameLetter
+{
+	0%
+	{
+		opacity: 0;
+        filter: drop-shadow(0 0 3vh white);
+		padding-top: 0;
+	}
+    100%
+	{
+		opacity: 1;
+        filter: drop-shadow(0 0 1vh white);
+		padding-top: 8vh;
+	}
+}
+
+/* #outroBox p
 {
 	font-family: "Caveat", sans-serif;
 	font-size: 4vh;
@@ -26,12 +68,12 @@
 	font-family: "Roboto Slab", serif;
 	font-size: 10vh;
 	opacity: 0;
-	animation: animName 6s calc(var(--outro-zoom-out) + 2s) ease-out forwards;
-}
+	animation: animName 6s 2s ease-out forwards;
+} */
 
 .animOutroIn
 {
-	animation: animOutroIn 1.5s var(--outro-zoom-out) ease forwards;
+	animation: animOutroIn 1.5s 0.5s ease forwards;
 }
 .animOutroOut
 {
@@ -79,7 +121,7 @@
     }
 }
 
-#heart, #heartTarget
+#heart, #heartHint
 {
 	overflow: visible;
 }
@@ -88,38 +130,19 @@
 {
 	fill: red;
 	cursor: grab;
-
 	opacity: 0;
-	animation: animFadeIn 1.5s calc(var(--outro-zoom-out) - 2s) ease forwards;
-}
-
-#heartTarget
-{
-	fill: rgba(0, 0, 0, 0);
-	stroke: white;
-	stroke-dasharray: 10;
 }
 
 .animHeartIn
 {
 	opacity: 0;
-	/* animation: animFadeIn 1.5s calc(var(--outro-zoom-out) - 2s) ease forwards; */
-	animation-name: animFadeIn;
-	animation-delay: var(--outro-zoom-out); 
-	animation-duration: 1.5s;
-	animation-iteration-count: 1;
-	animation-timing-function: ease;
-	animation-fill-mode: forwards;
-}
-.animTargetHeartIn
-{
-	opacity: 0;
-	animation: animFadeIn 1.5s calc(var(--outro-zoom-out) + 1s) ease forwards;
+	animation: animFadeIn 0.5s 0.05s ease forwards;
 }
 
 .animHeartOut
 {
-	animation: animFadeOut 0.4s 0.2s ease-out forwards;
+	opacity: 1;
+	animation: animFadeOut 0.4s ease-out forwards;
 }
 
 .animHeartBeat
@@ -139,6 +162,101 @@
     }
 }
 
+#heartHint
+{
+	/* fill: rgba(0, 0, 0, 0);
+	stroke: white;
+	stroke-dasharray: 10; */
+
+	fill: var(--color-highlight);
+	fill-opacity: 0.05;
+
+	stroke: var(--color-highlight);
+	stroke-width: 7px;
+	stroke-opacity: 0.5;
+}
+
+.animHeartHintIn
+{
+	opacity: 0;
+	animation: animFadeIn 1.5s var(--outro-zoom-out) ease forwards;
+}
+
+.animHeartHintPulse
+{
+	fill-opacity: 0;
+	stroke-width: 10px;
+
+	animation-name: animHeartHintPulse;
+	animation-duration: 1.5s;
+	animation-iteration-count: infinite;
+	animation-timing-function: ease-out;
+}
+@keyframes animHeartHintPulse
+{
+    0%
+	{
+        transform: scale(1.86) translate(-256px,-113px);
+		fill-opacity: 0.2;
+		stroke-opacity: 1;
+    }
+	
+    100%
+	{
+        transform: scale(2) translate(-256px,-113px);
+		fill-opacity: 0;
+		stroke-opacity: 0;
+    }
+}
+
+#heartHighlight
+{
+	animation: animHeartHighlight 1.5s ease-out forwards;
+	transform-origin: 256px 128px;
+}
+@keyframes animHeartHighlight
+{
+    0%
+	{
+        transform: translate(-256px, -112px) scale(1.86);
+		opacity: 0.7;
+    }
+	
+    20%
+	{
+		opacity: 0.7;
+    }
+	
+    100%
+	{
+        transform: translate(-256px, -112px) scale(3);
+		opacity: 0;
+    }
+}
+
+.animTilesCurrent
+{
+	animation-name: animTilesCurrent;
+	animation-duration: 1.5s;
+	animation-delay: var(--outro-zoom-out);
+	animation-iteration-count: infinite;
+    animation-direction: alternate;
+	animation-timing-function: ease-out;
+	animation-fill-mode: forwards;
+}
+@keyframes animTilesCurrent
+{
+    0%
+	{
+        filter: drop-shadow(0 30px 40px var(--color-highlight));
+    }
+	
+    100%
+	{
+        filter: drop-shadow(0 30px 20px var(--color-highlight));
+    }
+}
+
 .animTilesIn
 {
 	animation: animFadeIn 0.2s ease;
@@ -146,7 +264,7 @@
 
 .animTilesOut
 {
-	animation: animFadeOut 1s calc(var(--outro-zoom-out) - 1.5s) ease forwards;
+	animation: animFadeOut 0.5s 0.05s ease forwards;
 }
 
 .animGridOut
@@ -166,5 +284,5 @@
 	left: 0;
 	width: 100%;
 	opacity: 0;
-	animation: animFadeIn 2s 0.5s ease forwards;
+	animation: animFadeIn 2s 1s ease forwards;
 }
