Outro effects are now even better

--- a/styles/note.css
+++ b/styles/note.css
@@ -12,17 +12,19 @@
 #note
 {
 	position: absolute;
+	left: -2vh;
 	top: auto;
 	bottom: 0;
 	max-height: 20vh;
+	width: 100%;
 
 	color: white;
 	font-family: "Caveat", serif;
 	font-size: 4vh;
 	padding: 2vh;
 
-	background-color: rgba(10, 22, 48, 0.5);
-	/* backdrop-filter: blur(10px); */
+	background-color: rgba(10, 22, 48, 0.75);
+	backdrop-filter: blur(10px);
 	/* border: 1px solid var(--color-highlight); */
 	/* border-radius: 3vh; */
 
