Language selection text is relative to screen height

--- a/styles/intro.css
+++ b/styles/intro.css
@@ -25,6 +25,7 @@
 	background: none;
 
 	font-family: "Roboto Slab", serif;
+	font-size: 1.5vh;
 }
 #languageBox button:hover, #languageBox button:disabled
 {
