--- a/styles/outro.css
+++ b/styles/outro.css
@@ -140,7 +140,7 @@
 .animHeartIn
 {
 	opacity: 0;
-	animation: animFadeIn 0.5s 0.05s ease forwards;
+	animation: animFadeIn 0.5s 0.3s ease forwards;
 }
 
 .animHeartOut
@@ -238,7 +238,7 @@
 {
 	opacity: 0;
 	transform-origin: 256px 128px;
-	animation: animHeartHighlight 1.5s 0s ease-out forwards;
+	animation: animHeartHighlight 1.5s 0.3s ease-out forwards;
 }
 #heartHighlight2
 {
@@ -297,7 +297,30 @@
 
 .animTilesOut
 {
-	animation: animFadeOut 0.5s 0.05s ease forwards;
+	animation: animFadeOut 0.5s 0.3s ease forwards;
+}
+
+.animTilesSettle
+{
+	animation: animTilesSettle 0.3s ease forwards;
+}
+@keyframes animTilesSettle
+{
+	0%
+	{
+		transform: translate(0, 0);
+	}
+	75%
+	{
+		animation-timing-function: ease-in;
+		transform: translate(0, -48px);
+	}
+
+	100%
+	{
+		animation-timing-function: ease-out;
+		transform: translate(0, 0);
+	}
 }
 
 .animGridOut
