Added: Timeline framework

--- a/styles/note.css
+++ b/styles/note.css
@@ -49,7 +49,7 @@
 	opacity: 0;
 	animation-name: animFadeIn;
 	animation-duration: 1s;
-	animation-delay: 1.75s; 
+	/* animation-delay: 1.75s;  */
 }
 .animNoteOut
 {
