--- a/styles/outro.css
+++ b/styles/outro.css
@@ -31,9 +31,12 @@
 .outroNameLetter
 {
 	display: inline-block;
-	white-space: nowrap;
 	margin-left: 0.3em;
 	opacity: 0;
+	white-space: nowrap;
+}
+.animOutroNameLetter
+{
 	animation: animOutroNameLetter 4s ease forwards;
 }
 
@@ -352,13 +355,12 @@
 }
 #credits
 {
-	font-size: 4vh;
 	text-align: center;
 	padding-bottom: 2vh;
 	width: 90%;
 	margin-left: 5%;
 	font-family: "Tahoma", sans-serif;
-	font-size: 1.6vh;
+	font-size: 1.8vh;
 	color: var(--color-highlight);
 	opacity: 0.8;
 	letter-spacing: 0.1vh;
