--- a/styles/intro.css
+++ b/styles/intro.css
@@ -140,7 +140,7 @@
 	font-size: 1.8vh;
 }
 
-#loading
+#playSymbol
 {
 	position: relative;
 }
@@ -151,12 +151,12 @@
 	position: absolute;
 	left: -4.5vh;
 	top: 0.3vh;
+	width: 2vh;
+	height: 2vh;
 	border: 1vh solid rgba(255, 255, 255, 0.3);
 	border-top: 1vh solid white;
 	border-right: 1vh solid white;
 	border-radius: 50%;
-	width: 2vh;
-	height: 2vh;
 	animation: loadingSpin 2s linear infinite;
 }
 @keyframes loadingSpin
@@ -165,10 +165,27 @@
 	100% { transform: rotate(360deg); }
 }
 
+#playFullscreen
+{
+	position: absolute;
+	left: -4.5vh;
+	top: -0.5vh;
+	width: 2vh;
+	height: 2vh;
+	font-family: Arial;
+	font-size: 4vh;
+}
+
+#playFullscreen div
+{
+	position: absolute;
+	top: 0;
+}
+
 #locIntroTitle1, #locIntroTitle2, #locIntroTitle3, #locIntroTitle4, #play, #noScript, #gameObject
 {
-	opacity: 0;
-	animation: animFadeIn 2s ease-out forwards;
+	xopacity: 0;
+	xanimation: animFadeIn 2s ease-out forwards;
 }
 
 #locIntroTitle1	 { animation-delay: 1.0s; }
