--- a/styles/game.css
+++ b/styles/game.css
@@ -95,7 +95,7 @@
 	fill-opacity: 0.2;
 
 	stroke: var(--color-highlight);
-	stroke-width: 0.04;
+	stroke-width: 8;
 	stroke-opacity: 0.5;
 }
 .animTileHintDelayed
@@ -120,7 +120,7 @@
 	animation-timing-function: ease-out;
 
 	/* transform-origin: 0.025% 0.045%; */
-	transform-origin: 0.5px 0.5px;
+	transform-origin: 0 60px;
 }
 @keyframes animTileHint
 {
