--- a/styles/outro.css
+++ b/styles/outro.css
@@ -12,7 +12,7 @@
 {
 	position: absolute;
 	left: 50vw;
-	bottom: 20vh;
+	top: 65vh;
 	transform: translate(-50%, -50%);
 	width: min(14em, 90%);
 
@@ -20,6 +20,7 @@
 	text-align: center;
 	font-family: "Roboto Slab", serif;
 	font-size: 8vh;
+	text-wrap: nowrap;
 
 	/* animation: animName 6s 4s ease-out forwards; */
 }
@@ -27,7 +28,8 @@
 .outroNameLetter
 {
 	display: inline-block;
-	margin-left: 0.3em;
+	margin-left: 0.15em;
+	margin-right: 0.15em;
 	opacity: 0;
 	white-space: nowrap;
 }
