--- a/styles/outro.css
+++ b/styles/outro.css
@@ -193,6 +193,12 @@
 	animation: animFadeIn 0.5s ease forwards;
 }
 
+.animHeartHintOut
+{
+	opacity: 1;
+	animation: animFadeOut 0.5s 0.3s ease forwards;
+}
+
 .animHeartHintPulse
 {
 	fill-opacity: 0;
